--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -5,21 +5,16 @@
     "moduleResolution": "node",
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
-    "lib": [
-      "es2016",
-      "dom"
-    ],
+    "lib": ["es2016", "dom"],
     "outDir": "../out-tsc/app",
     "target": "es5",
     "module": "es2015",
     "baseUrl": "",
     "types": [],
-    "typeRoots": [
-      "../node_modules/@types"
-    ]
+    "typeRoots": ["../node_modules/@types"]
   },
-  "exclude": [
-    "test.ts",
-    "**/*.spec.ts"
-  ]
+  "angularCompilerOptions": {
+    "preserveWhitespaces": false
+  },
+  "exclude": ["test.ts", "**/*.spec.ts"]
 }
